remove AKSDB data from co-authorship guidelines
folder titled Untitled currently

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 
 book:
   title: "TMCA Urban Soil Mapping"
-  author: "N.B. Pearson"
+  author: "N.A. Jelinski, N.B. Pearson"
   date: "06-December-2023"
   cover-image: "TCMA-urban-soil-mapping-badge-13.png"
   
