--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ project:
 book:
   title: "TMCA Urban Soil Mapping"
   author: "N.B. Pearson"
-  date: "06-December-2023"
+  date: "15-December-2023"
   cover-image: "TCMA-urban-soil-mapping-badge-13.png"
   
   chapters:
@@ -16,12 +16,12 @@ book:
     - deliverable3.qmd
     - deliverable4.qmd
     - datamanagementplan.qmd
-    - authorship-guidelines.qmd
+    # - authorship-guidelines.qmd
     - summary.qmd
     - references.qmd
-  appendices:
-    - co-authorship-template.qmd
-    - data-use-and-sharing.qmd
+  # appendices:
+    # - co-authorship-template.qmd
+    # - data-use-and-sharing.qmd
 
 bibliography: references.bib
 
