--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,7 @@ book:
       - minutes-12JAN2024-qa-qc-nasis.qmd
       - minutes-02FEB2024-joe-nic-nora.qmd
       - minutes-02FEB2024-nic-nora.qmd
+      - minutes-20FEB2024-patty-nic-nora.qmd
     # - authorship-guidelines.qmd
     - summary.qmd
     - references.qmd
