--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ book:
       - minutes-02FEB2024-joe-nic-nora.qmd
       - minutes-02FEB2024-nic-nora.qmd
       - minutes-20FEB2024-patty-nic-nora.qmd
+      - minutes-27FEB2024-nic-nora-geospatial.qmd
+      - minutes-28FEB2024-patty-nic-nora.qmd
     # - authorship-guidelines.qmd
     - summary.qmd
     - references.qmd
