--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
       - minutes-27FEB2024-nic-nora-geospatial.qmd
       - minutes-28FEB2024-patty-nic-nora.qmd
       - minutes-06MAR2024-patty-nora.qmd
+      - minutes-12MAR2024-patty-nic-nora.qmd
     # - authorship-guidelines.qmd
     - summary.qmd
     - references.qmd
