--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ book:
       - minutes-28FEB2024-patty-nic-nora.qmd
       - minutes-06MAR2024-patty-nora.qmd
       - minutes-12MAR2024-patty-nic-nora.qmd
+      - minutes-20MAR2024-patty-nic-nora.qmd
     # - authorship-guidelines.qmd
     - summary.qmd
     - references.qmd
