--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,9 @@ book:
     - part: "Covariate Development"
       chapters:
       - minutes-17DEC2024-nic-nora.qmd
+    - part: "Data Entry"
+      chapters: 
+        - survey123-guide.qmd
     # - authorship-guidelines.qmd
     - references.qmd
   # appendices:
